syntax = "proto3";

option csharp_namespace = "ISKI.IBKS.WebAPI.Protos";

package station;

import "google/protobuf/timestamp.proto";

service StationStream {
  rpc GetLiveStream (StreamRequest) returns (stream TelemetryData);
}

message StreamRequest {
  string station_id = 1;
}

message TelemetryData {
  string station_id = 1;
  google.protobuf.Timestamp read_time = 2;
  
  // Analog values
  double ph = 3;
  double conductivity = 4;
  double dissolved_oxygen = 5;
  double turbidity = 6; // etc.
  
  // Status flags
  bool is_sampling = 7;
  bool is_calibration = 8;
  bool is_maintenance = 9;
}
